# src/controllers/auth.controller.ts
@@ -6,6 +6,7 @@ import UserModel from '../models/user.model';
 import { encrypt } from '../utils/encryption';
 import { generateToken } from '../utils/jwt';
 import { IReqUser } from '../middlewares/auth.middleware';
+import { isAccessor } from 'typescript';
 
 type TRegister = {
     fullName: string;
@@ -24,7 +25,21 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
+    password: Yup.string().required().min(6, 'Password must be at least 6 characters')
+    .test('at-least-one-uppercase-letter', 'Contains at least one uppercase letter', (value) => {
+        if(!value) return false;
+
+        const regex = /^(?=.*[A-Z])/;
+
+        return regex.test(value);
+    })
+    .test('at-least-one-number', 'Contains at least one number', (value) => {
+        if(!value) return false;
+
+        const regex = /^(?=.*\d)/;
+
+        return regex.test(value);
+    }),
     confirmPassword: Yup.string().required().oneOf([Yup.ref('password'), ""], "Password not matched"),
 })
 
@@ -86,8 +101,9 @@ export default {
             const userByIdentifier = await UserModel.findOne({ 
                 $or: [
                     { username: identifier },
-                    { email: identifier }
-                ]
+                    { email: identifier },
+                ],
+                isActive: true
             })
 
             if(!userByIdentifier) { 
@@ -141,6 +157,43 @@ export default {
                 data: result
             })
 
+        } catch (error) {
+            const err = error as unknown as Error;
+            return res.status(400).json({ 
+              message: err.message,
+              data: null
+            }) 
+        }
+    },
+
+    async activation (req: Request, res: Response) { 
+        /**
+          #swagger.tags = ['Auth']
+          #swagger.requestBody = {
+            required: true,
+            schema: { $ref: "#/components/schemas/ActivationRequest" }
+          }
+         */
+        try {
+            const { code } = req.body as { code: string };
+
+            const user = await UserModel.findOneAndUpdate(
+                { 
+                    activationCode: code 
+                },
+                {
+                    isActive: true,
+                },
+                {
+                    new: true
+                }
+            );
+
+            res.status(200).json({ 
+                message: 'Activation success',
+                data: user
+            });
+            
         } catch (error) {
             const err = error as unknown as Error;
             return res.status(400).json({ 
